--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,28 @@ a {
 ul {
   list-style-type: none;
 }
+
+/*Exercicio*/
+
+.header{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+  
+}
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  margin-right: auto;
+  gap: 16px;
+  align-items: center;
+}
+
+.notifications{
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+}
