--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
 body {
   font-family: 'Courier New', Courier, monospace;
 }
@@ -23,4 +27,30 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.title{
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.plants{
+  display: flex;
+  justify-content: space-evenly;
+  gap: 52px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+}
+
+.text{
+  max-width: 200px;
+  text-align: center;
+}
+
+.plants img{
+  align-self: center;
 }
