--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,33 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top{
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  gap: 20px
+}
+
+.icon{
+  flex-shrink: 0;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.top{
+  align-items: center;
+  
+}
+
+.text{
+  margin: 10px 0px;
+}
