--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  margin: 0px;
+  padding: 0px;
+}
 body {
   height: 100vh;
   margin: 0;
@@ -23,4 +27,61 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul, a{
+  list-style: none;
+  text-decoration: none;
+  color: black;
+}
+
+/* Menu Superior */
+.header{
+  display: flex;
+  padding: 10px 20px;
+  justify-content: space-between;
+}
+
+.left-links, .right-links{
+  display: flex;
+  gap: 20px;
+
+}
+
+.div.header{
+  align-self: center;
+}
+
+ul.left-links{
+  margin-right: auto;
+}
+
+
+/* Conteúdo*/
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  height: calc(100vh - 88px);
+  flex: 1;
+  
+}
+
+.buttons button{
+  padding: 10px ;
+}
+
+
+/*Footer */
+
+.footer{
+  display: flex;
+  background-color: #eeeeee;
+  padding: 15px 20px;
+  justify-content: space-between;
+  margin-top: auto;
+  flex: 1;
 }
