--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,71 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* SOLUTION */
+
+body{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.header{
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+/* Conteudo */
+
+.containerConteudo{
+  display: flex;
+  flex: 1;
+}
+
+.containerCard{
+  display: flex;
+  padding: 48px;
+  gap: 48px;
+  flex-wrap: wrap;
+}
+
+.card{
+  padding: 48px;
+  flex: 1;
+  width: 300px;;
+}
+
+.sidebar{
+  flex-shrink: 0;
+  width: 300px;
+  padding: 16px;
+
+}
+
+ul{
+  list-style: none;
+  font-size: 24px;
+  padding: 0;
+  margin: 0;
+  
+}
+
+a{
+  display: flex;
+  text-decoration: none;
+  color: white;
+  padding: 8px 0;
+  
+
+}
+
+/*Footer */
+
+.footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
